18_reverse_str/grade.txt
Grading at Sat Jun 13 11:28:45 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:8:11: error: multi-character character constant [-Werror=multichar]
   if(str=='NULL')
           ^
reverse.c:8:9: error: comparison between pointer and integer [-Werror]
   if(str=='NULL')
         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
